changed dropdown icons

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <ul class="menu">
                     <li>
                         <label for="drop-1" class="toggle dropdown-menu">Rajendra Masala <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span></label>
-                        <a href="#">Rajendra Masala</a>
+                        <a href="#">Rajendra Masala  <i class="icon-arrow-down dropdown"></i></a>
                         <input type="checkbox" id="drop-1" />
                         <ul>
                             <li><a href="javascript:void(0);" id="modalLink1" onClick="openModal(1)"> Blended Spices </a></li>
@@ -101,7 +101,7 @@
                     </li>
                     <li>
                        <label for="drop-10" class="toggle dropdown-menu">Satyendra Foods  <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span></label>
-                       <a href="#"> Satyendra Food</a>
+                       <a href="#"> Satyendra Food  <i class="icon-arrow-down dropdown"></i></a>
                        <input type="checkbox" id="drop-10" />
                        <ul>
                           <li><a href="javascript:void(0);" id="modalLink27" onClick="openModal(27)"> Satyendra Regular Sattoo ( 80gm ) </a></li>
@@ -115,7 +115,7 @@
                     </li>
                     <li>
                       <label for="drop-11" class="toggle dropdown-menu">Sky Surf  <i class="icon-arrow-down dropdown"></i><span class="dropdown-icon">+</span></label>
-                      <a href="#"> Sky Surf</a>
+                      <a href="#"> Sky Surf  <i class="icon-arrow-down dropdown"></i></a>
                       <input type="checkbox" id="drop-11" />
                        <ul>
                            <li><a href="javascript:void(0);" id="modalLink48" onClick="openModal(48)"> Sky Surf 5Kg </a></li>
@@ -133,12 +133,12 @@
                     </li>
                     <li>
                         <label for="drop-2" class="toggle dropdown-menu"> Sloppy Noodles  <i class="icon-arrow-down dropdown"></i>  <span class="dropdown-icon">+</span> </label>
-                        <a href="#">Sloppy Noodles</a>
+                        <a href="#">Sloppy Noodles  <i class="icon-arrow-down dropdown"></i></a>
                         <input type="checkbox" id="drop-2" />
                         <ul>
                           <li>
                             <label for="drop-3" class="toggle dropdown-menu sub-menu"> Masala Noodles   <i class="icon-arrow-down dropdown"></i><span class="dropdown-icon">+</span></label>
-                            <a href="#"> Masala Noodles</a>
+                            <a href="#"> Masala Noodles  <i class="icon-arrow-right dropdown"></i></a>
                             <input type="checkbox" id="drop-3" />
                             <ul>
                                 <li><a href="javascript:void(0);" id="modalLink6" onClick="openModal(6)">Masala Noodles Rs.5</a></li>
@@ -150,12 +150,12 @@
                     </li>
                     <li>
                         <label for="drop-4" class="toggle dropdown-menu"> Archita Agarbatti  <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span></label>
-                        <a href="#"> Archita Agarbatti</a>
+                        <a href="#"> Archita Agarbatti  <i class="icon-arrow-down dropdown"></i></a>
                         <input type="checkbox" id="drop-4" />
                         <ul>
                            <li>
                              <label for="drop-5" class="toggle dropdown-menu sub-menu"> Archita Agarbatti Rs.5   <i class="icon-arrow-down dropdown"></i><span class="dropdown-icon">+</span></label>
-                             <a href="#"> Archita Agarbatti Rs.5 </a>
+                             <a href="#"> Archita Agarbatti Rs.5  <i class="icon-arrow-right dropdown"></i></a>
                              <input type="checkbox" id="drop-5" />
                              <ul>
                                <li><a href="javascript:void(0);" id="modalLink9" onClick="openModal(9)">Bharatwasi</a></li>
@@ -166,7 +166,7 @@
                             </li>
                             <li>
                               <label for="drop-6" class="toggle dropdown-menu sub-menu"> Archita Agarbatti Rs.10  <i class="icon-arrow-down dropdown"></i>  <span class="dropdown-icon">+</span></label>
-                              <a href="#"> Archita Agarbatti Rs.10</a>
+                              <a href="#"> Archita Agarbatti Rs.10  <i class="icon-arrow-right dropdown"></i></a>
                               <input type="checkbox" id="drop-6" />
                               <ul>
                                 <li><a href="javascript:void(0);" id="modalLink13" onClick="openModal(13)">Bharatwasi</a></li>
@@ -178,7 +178,7 @@
                             </li>
                             <li>
                                 <label for="drop-7" class="toggle dropdown-menu sub-menu"> Archita Dhoop Agarbatti Rs.5  <i class="icon-arrow-down dropdown"></i>  <span class="dropdown-icon">+</span></label>
-                                <a href="#"> Archita Dhoop Agarbatti Rs.5</a>
+                                <a href="#"> Archita Dhoop Agarbatti Rs.5  <i class="icon-arrow-right dropdown"></i></a>
                                 <input type="checkbox" id="drop-7" />
                                 <ul>
                                   <li><a href="javascript:void(0);" id="modalLink18" onClick="openModal(18)">Herbal Dhoop</a></li>
@@ -188,7 +188,7 @@
                             </li>
                             <li>
                                 <label for="drop-8" class="toggle dropdown-menu sub-menu"> Archita Dhoop Agarbatti Rs.10  <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span></label>
-                                <a href="#"> Archita Dhoop Agarbatti Rs.10</a>
+                                <a href="#"> Archita Dhoop Agarbatti Rs.10  <i class="icon-arrow-right dropdown"></i></a>
                                 <input type="checkbox" id="drop-8" />
                                 <ul>
                                   <li><a href="javascript:void(0);" id="modalLink21" onClick="openModal(21)">Herbal Dhoop</a></li>
@@ -198,7 +198,7 @@
                             </li>
                             <li>
                                 <label for="drop-9" class="toggle dropdown-menu sub-menu"> Archita Dhoop Agarbatti Rs.20   <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span></label>
-                                <a href="#"> Archita Dhoop Agarbatti Rs.20</a>
+                                <a href="#"> Archita Dhoop Agarbatti Rs.20  <i class="icon-arrow-right dropdown"></i></a>
                                 <input type="checkbox" id="drop-9" />
                                 <ul>
                                   <li><a href="javascript:void(0);" id="modalLink24" onClick="openModal(24)">Guldasta </a></li>
@@ -210,7 +210,7 @@
                     </li>
                     <li>
                         <label for="drop-15" class="toggle dropdown-menu"> Gopi's Namkeen  <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span></label>
-                        <a href="#">Gopi's Namkeen</a>
+                        <a href="#">Gopi's Namkeen  <i class="icon-arrow-down dropdown"></i></a>
                         <input type="checkbox" id="drop-15" />
                         <ul>
                            <li><a href="javascript:void(0);" id="modalLink34" onClick="openModal(34)"> Pasta ( Rs 2 ) </a></li>
@@ -226,7 +226,7 @@
                     </li>
                     <li>
                        <label for="drop-17" class="toggle dropdown-menu"> Swastik Biscuits  <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span></label>
-                       <a href="#">Swastik Biscuits</a>
+                       <a href="#">Swastik Biscuits  <i class="icon-arrow-down dropdown"></i></a>
                        <input type="checkbox" id="drop-17" />
                        <ul>
                          <li><a href="javascript:void(0);" id="modalLink59" onClick="openModal(59)"> Krispo ( Rs 5 )</a></li>
@@ -241,7 +241,7 @@
                     </li>
                      <li>
                        <label for="drop-16" class="toggle dropdown-menu">Other Products  <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span> </label>
-                        <a href="#"> Other Products</a>
+                        <a href="#"> Other Products  <i class="icon-arrow-down dropdown"></i></a>
                         <input type="checkbox" id="drop-16" />
                         <ul>
                           <li><a href="javascript:void(0);" id="modalLink43" onClick="openModal(43)"> Jali (Scrubber) - Rs.60 /Patta</a></li>
