--- a/index.html
+++ b/index.html
@@ -269,14 +269,12 @@
             <label for="drop-18" class="toggle dropdown-menu">Ganesh Masala <i class="icon-arrow-down dropdown"></i>
               <span class="dropdown-icon">+</span></label>
             <a href="#">Ganesh Masala <i class="icon-arrow-down dropdown"></i></a>
-            <input type="checkbox" id="drop-17" /> </label>
+            <input type="checkbox" id="drop-18" />
             <ul>
               <li><a href="javascript:void(0);" id="modalLink67" onClick="openModal(67)"> Ghee (Rs 5)</a></li>
               <li><a href="javascript:void(0);" id="modalLink68" onClick="openModal(68)"> Madh (Rs 4)</a></li>
-              <li><a href="javascript:void(0);" id="modalLink69" onClick="openModal(69)"> Batisha Powder (400gm) </a>
-              </li>
-              <li><a href="javascript:void(0);" id="modalLink70" onClick="openModal(70)"> Batisha Powder (200gm) </a>
-              </li>
+              <li><a href="javascript:void(0);" id="modalLink69" onClick="openModal(69)"> Batisha Powder (400gm) </a> </li>
+              <li><a href="javascript:void(0);" id="modalLink70" onClick="openModal(70)"> Batisha Powder (200gm) </a>   </li>
               <li><a href="javascript:void(0);" id="modalLink71" onClick="openModal(71)"> Batisha (400gm)</a></li>
               <li><a href="javascript:void(0);" id="modalLink72" onClick="openModal(72)"> Batisha (200gm)</a></li>
             </ul>
@@ -536,7 +534,7 @@
 
         <h1>Herbal Dhoop</h1>
         <p>Archita Agarbathi</p>
-        <img src="assets/img/archita-agarbathi/dhoop-agarbathi-10rs/Archita-herbal-dhoop.jpeg" class="modal-img">
+        <img src="assets/img/archita-agarbathi/dhoop-agarbathi-10rs/arpita-herbal-dhoop.jpeg" class="modal-img">
       </div>
     </div>
     <div id="modal22" class="modal">
@@ -558,7 +556,7 @@
 
         <h1>Pride</h1>
         <p>Archita Agarbathi</p>
-        <img src="assets/img/archita-agarbathi/dhoop-agarbathi-10rs/Archita-pride.jpeg" class="modal-img">
+        <img src="assets/img/archita-agarbathi/dhoop-agarbathi-10rs/arpita-pride.jpeg" class="modal-img">
       </div>
     </div>
     <div id="modal24" class="modal">
@@ -696,7 +694,7 @@
 
         <h1> Pasta ( Rs 5 )</h1>
         <p> Gopi's Namkeen </p>
-        <img src="assets/img/gopis-namkeen/pasta-5rs.jpeg" class="modal-img">
+        <img src="assets/img/gopis-namkeen/pasta-2rs.jpeg" class="modal-img">
       </div>
     </div>
     <div id="modal38" class="modal">
