added new products

--- a/index.html
+++ b/index.html
@@ -138,12 +138,9 @@
               <li><a href="javascript:void(0);" id="modalLink53" onClick="openModal(53)"> Sky Surf (Rs.10) </a></li>
               <li><a href="javascript:void(0);" id="modalLink54" onClick="openModal(54)"> Sky Dishwash 900gm </a></li>
               <li><a href="javascript:void(0);" id="modalLink55" onClick="openModal(55)"> Sky Dishwash 400gm </a></li>
-              <li><a href="javascript:void(0);" id="modalLink56" onClick="openModal(56)"> Sky Dishwash 220gm (Rs.10)</a>
-              </li>
-              <li><a href="javascript:void(0);" id="modalLink57" onClick="openModal(57)"> Sky Dishwash 110gm (Rs. 5)
-                </a></li>
-              <li><a href="javascript:void(0);" id="modalLink58" onClick="openModal(58)"> Sky Detergent Cake 300gm
-                  (Rs.10) </a></li>
+              <li><a href="javascript:void(0);" id="modalLink56" onClick="openModal(56)"> Sky Dishwash 220gm (Rs.10)</a> </li>
+              <li><a href="javascript:void(0);" id="modalLink57" onClick="openModal(57)"> Sky Dishwash 110gm (Rs. 5)</a></li>
+              <li><a href="javascript:void(0);" id="modalLink58" onClick="openModal(58)"> Sky Detergent Cake 300gm (Rs.10) </a></li>
             </ul>
           </li>
           <li>
@@ -278,6 +275,15 @@
               <li><a href="javascript:void(0);" id="modalLink71" onClick="openModal(71)"> Batisha (400gm)</a></li>
               <li><a href="javascript:void(0);" id="modalLink72" onClick="openModal(72)"> Batisha (200gm)</a></li>
             </ul>
+          </li>
+          <li>
+            <label for="drop-19" class="toggle dropdown-menu">Doodhdhara Pashu Ahar<i class="icon-arrow-down dropdown"></i>
+              <span class="dropdown-icon">+</span></label>
+              <a href="#">Doodhara Pashu Ahar <i class="icon-arrow-down"></i></a>
+              <input type="checkbox" id="drop-19" />
+              <ul>
+                <li><a href="javascript:void(0);" id="modalLink73" onClick="openModal(73)">Super</a></li>
+              </ul>
           </li>
           <li>
             <label for="drop-16" class="toggle dropdown-menu">Other Products <i class="icon-arrow-down dropdown"></i>
@@ -904,7 +910,7 @@
 
         <h1>Sky Dishwash 900Gm</h1>
         <p> Sky Surf</p>
-        <img src="assets/img/sky/sky-dishwasher-lime.jpeg" class="modal-img">
+        <img src="assets/img/sky/sky-dishwash-400-900.jpeg" class="modal-img">
       </div>
     </div>
     <div id="modal55" class="modal">
@@ -916,7 +922,7 @@
 
         <h1>Sky Dishwash 400Gm</h1>
         <p> Sky Surf </p>
-        <img src="assets/img/sky/sky-dishwasher-400gm.jpeg" class="modal-img">
+        <img src="assets/img/sky/sky-dishwash-400-900.jpeg" class="modal-img">
       </div>
     </div>
     <div id="modal56" class="modal">
@@ -928,7 +934,7 @@
 
         <h1>Sky Dishwash 220Gm ( Rs 10 )</h1>
         <p> Sky Surf</p>
-        <img src="assets/img/sky/sky-dishwash-200gm.jpeg" class="modal-img">
+        <img src="assets/img/sky/sky-dishwash-110gm-new.jpeg" class="modal-img">
       </div>
     </div>
     <div id="modal57" class="modal">
@@ -952,7 +958,7 @@
 
         <h1>Sky Detergent Cake 300Gm ( Rs 10 )</h1>
         <p> Sky Surf</p>
-        <img src="assets/img/sky/sky-dishwash-10rs.jpeg" class="modal-img">
+        <img src="assets/img/sky/sky-dishwash-5-10.jpeg" class="modal-img">
       </div>
     </div>
 
@@ -1057,7 +1063,6 @@
     <div id="modal68" class="modal">
       <!-- modal content -->
       <div class="modal-content">
-
         <!-- The close button -->
         <span class="close" onClick="closeModal(68)">&times;</span>
         <h1> Madh (Rs 4) </h1>
@@ -1102,6 +1107,16 @@
         <span class="close" onClick="closeModal(72)">&times;</span>
         <h1> Batisha (200gm) </h1>
         <img src="assets/img/ganesh-masala/batisha-200gm.jpeg" class="modal-img">
+      </div>
+    </div>
+    <div id="modal73" class="modal">
+      <!-- modal content -->
+      <div class="modal-content">
+
+        <!-- The close button -->
+        <span class="close" onClick="closeModal(73)">&times;</span>
+        <h1> Doodhdhara Pashu Ahar </h1>
+        <img src="assets/img/doodhdhara-pashu-ahar/super.jpeg" class="modal-img">
       </div>
     </div>
   </section>
@@ -1158,7 +1173,7 @@
           Sujeet Kirana Store - established in 2010 founded by Binod Sah (CEO) and Sujeet Kumar Gupta (Business
           Development Manager) is a one stop store for all your kirana requirements. <br />
           Dealer of : Satyendra Sattoo, Rajendra Masala, Sky Detergent Powder, Sloppy Noodles, Archita Agarbatti, Gopi's
-          Namkeen, Swastik Biscuits, Ganesh Masala
+          Namkeen, Swastik Biscuits, Ganesh Masala, Doodhdhara Pashu Ahar
         </p>
       </div>
     </div>
